# edu-prod

./: .gitignore  CLAUDE.md  PRD.md  netlify.toml  package.json  pnpm-lock.yaml
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/supabase/already/: already1.sql
backend/supabase/migrations/: 00001_initial_schema.sql  0002_init_tenant_auth.sql  0003_update_handle_new_user_trigger.sql  0004_courses_add_tenant_id.sql  0005_create_modules_alter_lessons.sql  0006_update_lessons_editor.sql  0007_create_lesson_progress.sql  0008_create_live_sessions.sql  0009_tenants_public_by_subdomain.sql  0010_tenants_profile_layout.sql  0011_live_sessions_reminder_sent.sql  0012_multi_teacher_calendar.sql  0013_create_centers.sql  0014_create_payroll.sql  0015_create_audit_logs.sql  0016_live_sessions_kind.sql  0017_live_sessions_recurrence.sql  0018_tenant_teachers_profile_link.sql  0019_notifications.sql  0020_rls_helpers_security_definer.sql  0021_live_sessions_course_optional.sql  0022_payroll_bridge.sql  0023_centers_payout_day.sql  0024_payroll_bridge_enum_casts.sql  0025_courses_rls_teacher_read.sql  0026_payout_workflow.sql  0027_payroll_items_update_paid_columns.sql  0028_public_assets_storage_rls.sql  0029_timetable.sql  0030_subject_teachers.sql  0031_tenants_kind.sql  0032_teacher_roles.sql  0033_tenants_public_tkb_token.sql  0034_billing_payos.sql  0035_recurring_adjustments.sql  0036_session_cancellation_reason.sql  0037_rate_rules.sql  0038_payroll_engine_shadow.sql
frontend/: .env.example  next.config.ts  package.json  (+1 more)
(+269 files in other folders)
